Bug 505711 - Compilation failure on MinGW in gfx/thebes. r=jfkthame