gfx/thebes/src/gfxWindowsFonts.cpp
@@ -421,8 +421,8 @@ gfxWindowsFont::Measure(gfxTextRun *aTextRun,
         // and we won't be putting it in the font cache. So we want to
         // delete it immediately it goes out of scope, not call
         // gfxFont::Release which deals with shared, cached font instances.
-        nsAutoPtr<gfxWindowsFont> tempFont =
-            new gfxWindowsFont(GetFontEntry(), GetStyle(), CAIRO_ANTIALIAS_NONE);
+        nsAutoPtr<gfxWindowsFont> tempFont(
+            new gfxWindowsFont(GetFontEntry(), GetStyle(), CAIRO_ANTIALIAS_NONE));
         if (tempFont) {
             return tempFont->Measure(aTextRun, aStart, aEnd,
                                      TIGHT_HINTED_OUTLINE_EXTENTS,
